backend-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: lookhin4181/nevers-kube-final:v1.0.20
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: "1000m"
            memory: "1000Mi"
          requests:
            cpu: "1000m"
            memory: "1000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
