backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
spec: 
  rules: 
  - host: backend-test.workshop.com
    http: 
      paths: 
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: backend
            port:
              number: 80
